--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,148 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
+<head>
+    <meta charset="utf-8"/>
 
-        <meta name="viewport"
-              content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, width=device-width"/>
+    <meta name="viewport"
+          content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0, width=device-width"/>
 
-        <meta name="description" content=""/>
-        <meta name="author" content=""/>
-        <link rel="shortcut icon" href=""/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <link rel="shortcut icon" href=""/>
 
-        <!-- iOS -->
-        <meta name="apple-mobile-web-app-capable" content="yes"/>
-        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-        <meta name="apple-mobile-web-app-title" content=""/>
-        <link rel="apple-touch-icon" sizes="152x152" href=""/>
-        <!-- iOS 7 iPhone @2x -->
-        <link rel="apple-touch-startup-image"
-              media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href=""/>
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-title" content=""/>
+    <link rel="apple-touch-icon" sizes="152x152" href=""/>
+    <!-- iOS 7 iPhone @2x -->
+    <link rel="apple-touch-startup-image"
+          media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href=""/>
 
-        <title>wittl</title>
+    <title>wittl</title>
 
-        <!-- Stylesheets -->
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,500,600,700,400italic|Lato:300,400,600|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
-        <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
-        <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
+    <!-- Stylesheets -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,500,600,700,400italic|Lato:300,400,600|Roboto:400,300,400italic,500,700'
+          rel='stylesheet' type='text/css'/>
+    <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
+    <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
 
-        <!-- Custom styles for this template -->
-        <link href="/static/web/css/base.css" rel="stylesheet"/>
+    <!-- Custom styles for this template -->
+    <link href="/static/web/css/base.css" rel="stylesheet"/>
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
+    <script type="text/javascript">
+        window.heap = window.heap || [];
+        heap.load = function (a) {
+            window._heapid = a;
+            var b = document.createElement("script");
+            b.type = "text/javascript", b.async = !0, b.src = ("https:" === document.location.protocol ? "https:" : "http:") + "//cdn.heapanalytics.com/js/heap.js";
+            var c = document.getElementsByTagName("script")[0];
+            c.parentNode.insertBefore(b, c);
+            var d = function (a) {
+                return function () {
+                    heap.push([a].concat(Array.prototype.slice.call(arguments, 0)))
+                }
+            }, e = ["identify", "track"];
+            for (var f = 0; f < e.length; f++)heap[e[f]] = d(e[f])
+        };
+        heap.load("730992440");
+    </script>
+</head>
 
-    </head>
+<body>
 
-    <body>
+<!-- Visual Debugging (e.g. current Boostrap/responsive screen width) -->
+<!-- <div class="debug">
+    <div class="visiblity">
+        <span class="visible-xs">Size XS</span>
+        <span class="visible-sm">Size SM</span>
+        <span class="visible-md">Size MD</span>
+        <span class="visible-lg">Size LG</span>
+    </div>
+</div> -->
 
-        <!-- Visual Debugging (e.g. current Boostrap/responsive screen width) -->
-        <!-- <div class="debug">
-            <div class="visiblity">
-                <span class="visible-xs">Size XS</span>
-                <span class="visible-sm">Size SM</span>
-                <span class="visible-md">Size MD</span>
-                <span class="visible-lg">Size LG</span>
+<!-- Content here -->
+
+<!-- Main body -->
+<div id="home">
+    <nav id="main-nav" class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- <a class="navbar-brand" href="#">Brand</a> -->
             </div>
-        </div> -->
 
-        <!-- Content here -->
-
-        <!-- Main body -->
-       	<div id="home">
-       		<nav id="main-nav" class="navbar navbar-default" role="navigation">
-			  <div class="container">
-			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			      <!-- <a class="navbar-brand" href="#">Brand</a> -->
-			    </div>
-
-			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse">
-			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Home</a></li>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-			        <li><a href="#">Popular</a></li>
-			      </ul>
+                    <li><a href="#">Popular</a></li>
+                </ul>
 
-                  <ul class="login pull-right">
+                <ul class="login pull-right">
                     <li><a class="login-btn" href="{% url 'login' %}">Login</a></li>
                     <li><a class="login-btn" href="{% url 'register' %}">Register</a></li>
-                  </ul>
-			    </div><!-- /.navbar-collapse -->
-			  </div><!-- /.container-fluid -->
-			</nav>
-
-       		<section class="hero">
-                <div class="wrap">
-                    <img src="/static/web/images/logo.png" />
-                    <h2>Reach <em>better</em> decisions <em>faster</em></h2>
-                </div>
-       		</section>
-
-            <section class="content">
-                <div class="container-fluid">
-
-                    <div class="strip row">
-                        <header class="main-header col-xs-6 col-xs-offset-3">
-                            
-                            <div class="signup-wrap">
-                                <a href="{% url 'register' %}" id="signup">Sign Up</a>                        
-                            </div>
-                            
-                            <div class="tagline col-sm-6 col-sm-offset-3">
-                                <h4>You haven't heard of it yet?!<br />That's okay. Sign up and find out!</h4>
-                            </div>
-                        </header>
-                    </div>
-
-                    <div class="row">
-                    </div>
-
-                    <!-- <div class="row">
-                        <div class="container">
-
-                            <div class="col-xs-4">
-                                <h3>Collect</h3>
-                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                            </div>
-
-                            <div class="col-xs-4">
-                                <h3>Wittl</h3>
-                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                            </div>
-
-                            <div class="col-xs-4">
-                                <h3>Decide</h3>
-                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                            </div>
-
-                        </div>
-                    </div> -->
-
-                </div>
-            </section>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- End main body -->
+        <!-- /.container-fluid -->
+    </nav>
+
+    <section class="hero">
+        <div class="wrap">
+            <img src="/static/web/images/logo.png"/>
+
+            <h2>Reach <em>better</em> decisions <em>faster</em></h2>
+        </div>
+    </section>
+
+    <section class="content">
+        <div class="container-fluid">
+
+            <div class="strip row">
+                <header class="main-header col-xs-6 col-xs-offset-3">
+
+                    <div class="signup-wrap">
+                        <a href="{% url 'register' %}" id="signup">Sign Up</a>
+                    </div>
+
+                    <div class="tagline col-sm-6 col-sm-offset-3">
+                        <h4>You haven't heard of it yet?!<br/>That's okay. Sign up and find out!</h4>
+                    </div>
+                </header>
+            </div>
+
+            <div class="row">
+            </div>
+
+            <!-- <div class="row">
+                <div class="container">
+
+                    <div class="col-xs-4">
+                        <h3>Collect</h3>
+                        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                    </div>
+
+                    <div class="col-xs-4">
+                        <h3>Wittl</h3>
+                        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                    </div>
+
+                    <div class="col-xs-4">
+                        <h3>Decide</h3>
+                        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                    </div>
+
+                </div>
+            </div> -->
+
+        </div>
+    </section>
+</div>
+<!-- End main body -->
 
 
-        <!-- JavaScript here
-        ================================================== -->
-        <script src="/static/web/js/vendor/underscore.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="/static/web/js/vendor/bootstrap.js"></script>
-        <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
-        {% block javascript %}
-        {% endblock %}
-    </body>
+<!-- JavaScript here
+================================================== -->
+<script src="/static/web/js/vendor/underscore.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="/static/web/js/vendor/bootstrap.js"></script>
+<script src="/static/web/js/vendor/isotope.pkgd.js"></script>
+{% block javascript %}
+{% endblock %}
+</body>
 </html>
