Updated vagrant box to 1404
Added static serving to development boxes

--- a/deploy/roles/web/templates/nginx_site_config.j2
+++ b/deploy/roles/web/templates/nginx_site_config.j2
@@ -15,6 +15,7 @@ server {
     access_log {{ nginx_access_log_file }};
     error_log {{ nginx_error_log_file }};
 
+    {% if development %}
     location /static/ {
         alias   {{ nginx_static_dir }};
     }
@@ -22,6 +23,7 @@ server {
     location /media/ {
         alias   {{ nginx_media_dir }};
     }
+    {% endif %}
 
     location / {
         if (-f {{ virtualenv_path }}/maintenance_on.html) {
