--- a/deploy/roles/web/templates/supervisor_config.j2
+++ b/deploy/roles/web/templates/supervisor_config.j2
@@ -3,3 +3,4 @@ command = {{ virtualenv_path }}/bin/gunicorn_start
 user = {{ gunicorn_user }}
 stdout_logfile = {{ application_log_file }}
 redirect_stderr = true
+autostart = true
