Fixed production static serving

--- a/deploy/roles/web/templates/nginx_site_config.j2
+++ b/deploy/roles/web/templates/nginx_site_config.j2
@@ -15,7 +15,7 @@ server {
     access_log {{ nginx_access_log_file }};
     error_log {{ nginx_error_log_file }};
 
-    {% if development %}
+    {% if not development %}
     location /static/ {
         alias   {{ nginx_static_dir }};
     }
