--- a/wittl/web/templates/js_dependencies.html
+++ b/wittl/web/templates/js_dependencies.html
@@ -18,6 +18,9 @@
 <script type="text/javascript" src="/static/web/js/vendor/nanobar.js"></script>
 <script type="text/javascript" src="/static/web/js/vendor/selectize/js/standalone/selectize.min.js"></script>
 
+<script src="/static/web/js/vendor/hopscotch.min.js"></script>
+<script src="/static/web/js/tours/onboarding.js"></script>
+
 <script src="/static/web/js/vendor/angular/angular.js"></script>
 <script src="/static/web/js/vendor/angular/angular-animate.js"></script>
 <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
