Began to add anonymous users
Attempted to add anonymous users but new wittlists are not showing on
newly created account’s wittlists

--- a/wittl/web/templates/index.html
+++ b/wittl/web/templates/index.html
@@ -93,6 +93,7 @@
                 </ul>
 
                 <ul class="login pull-right">
+                    <li><a href="{% url 'create_anonymous' %}">Create a new Wittlist</a></li>
                     <li><a class="login-btn" href="{% url 'login' %}">Login</a></li>
                     <li><a class="login-btn" href="{% url 'register' %}">Register</a></li>
                 </ul>
