Offloaded tasks to celery
Various devops improvements, sendfile and static file fixes

--- a/deploy/roles/celery/templates/upstart.celerybeat.conf.j2
+++ b/deploy/roles/celery/templates/upstart.celerybeat.conf.j2
@@ -1,8 +1,12 @@
 # simple celerybeat upstart job
 
 description "{{ project_name }}-celerybeat instance"
+setuid wittl
+setgid webapps
 start on runlevel [2345]
 stop on runlevel [06]
 
-
-exec {{ virtualenv_path }}/bin/python {{ application_path }}/manage.py celery beat --loglevel=INFO --settings=base.settings.live
+script
+  . {{ virtualenv_path}}/bin/postactivate
+  {{ virtualenv_path }}/bin/python {{ application_path }}/manage.py celery beat --loglevel=INFO -A wittl
+end script
