--- a/deploy/roles/web/templates/nginx_site_config.j2
+++ b/deploy/roles/web/templates/nginx_site_config.j2
@@ -15,13 +15,15 @@ server {
     access_log {{ nginx_access_log_file }};
     error_log {{ nginx_error_log_file }};
 
-    location /static/ {
-        {% if not development %}
-        alias   {{ nginx_static_dir }};
-        {% else %}
-        alias {{ application_path }}/web/static/;
-        {% endif %}
+    {% if development %}
+    location /static/web/ {
+     alias {{ application_path }}/web/static/web/;
     }
+    {% else %}
+    location /static/ {
+      alias   {{ nginx_static_dir }};
+    }
+    {% endif %}
 
     location /media/ {
         alias   {{ nginx_media_dir }};
@@ -45,10 +47,12 @@ server {
     }
 
     # Error pages
+    {% if not development %}
     error_page 500 502 504 /500.html;
     location = /500.html {
         root {{ application_path }}/templates/;
     }
+    {% endif %}
 
     error_page 503 /maintenance_on.html;
     location = /maintenance_on.html {
